--- a/header.html
+++ b/header.html
@@ -28,6 +28,7 @@
                 position: sticky;
                 top: 0;
                 z-index: 1000;
+                font-family: Arial, sans-serif;
             }
             .menu {
                 display: flex;
